--- a/packages/es6-package/package.json
+++ b/packages/es6-package/package.json
@@ -4,11 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "rollup": "^0.60.4",
-    "rollup-plugin-babel": "^3.0.4"
+    "rollup": "^0.60.4"
   },
   "scripts": {
     "build": "rollup -c",
