--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "es6-package": "^1.0.0",
     "jest": "^23.1.0"
   },
