--- a/packages/es6-package/package.json
+++ b/packages/es6-package/package.json
@@ -1,18 +1,11 @@
 {
   "name": "es6-package",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
     "rollup": "^0.60.4"
   },
   "scripts": {
-    "build": "rollup -c",
-    "prepublish": "npm run build"
-  },
-  "files": [
-    "dist"
-  ],
-  "module": "dist/index.es6.js",
-  "jsnext:main": "dist/index.es6.js"
+  }
 }
