--- a/packages/app/.babelrc
+++ b/packages/app/.babelrc
@@ -1,25 +1,15 @@
 {
   "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "browsers": [
-            "Android 2.3",
-            "Android >= 4",
-            "Chrome >= 35",
-            "Firefox >= 31",
-            "Explorer >= 9",
-            "iOS >= 7",
-            "Opera >= 12",
-            "Safari >= 7.1"
-          ]
-        },
-        "modules": false
-      }
-    ]
+    [ "env", {
+      "targets": {
+        "browsers": "> 2%"
+      },
+      "modules": false
+    }]
+  ], 
+  "plugins": [
+    "external-helpers"
   ],
-  "plugins": [],
   "env": {
     "test": {
       "presets": [
