--- a/packages/es6-package/.babelrc
+++ b/packages/es6-package/.babelrc
@@ -6,8 +6,15 @@
       },
       "modules": false
     }]
-  ],
+  ], 
   "plugins": [
     "external-helpers"
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        ["env", { "modules": "commonjs" }]
+      ]
+    }
+  }
 }
